BaikalETK: fix output of enforcegammaconstraint

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -811,7 +811,7 @@
     "            paramstr+= \"ShiftCondition=\"+ShiftCondition+\",\"\n",
     "            paramstr+= \"enable_stress_energy_source_terms=\"+str(enable_stress_energy)\n",
     "            if (WhichPart != \"detgammabar_constraint\") \\\n",
-    "               or (WhichPart == \"detgammabar_constraint\" and FD_order==FD_orders[0]):\n",
+    "               or (WhichPart == \"detgammabar_constraint\" and FD_order==4):\n",
     "                # Do not output detgammabar_constraint code more than once for each thorn, as \n",
     "                #    it does not depend on FD_order\n",
     "                paramslist.append(paramstr)\n",
@@ -844,59 +844,61 @@
       "***************************************\n",
       "Starting parallel C kernel codegen...\n",
       "***************************************\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating symbolic expressions for Ricci tensor...\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating symbolic expressions for Ricci tensor...\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating symbolic expressions for Ricci tensor...\n",
-      "Generating symbolic expressions for Ricci tensor...\n",
-      "Generating optimized C code (FD_order=2) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Generating symbolic expressions for Ricci tensor...\n",
-      "(BENCH) Finished gamma constraint C codegen (FD_order=2) in 0.0592188835144043 seconds.\n",
-      "(BENCH) Finished BSSN RHS symbolic expressions in 0.9104607105255127 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=6,Tmunu=False) in Cartesian coordinates.\n",
-      "(BENCH) Finished BSSN RHS symbolic expressions in 0.9229826927185059 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
-      "(BENCH) Finished BSSN RHS symbolic expressions in 0.9583601951599121 seconds.\n",
-      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n",
+      "Generating symbolic expressions for BSSN RHSs...Generating symbolic expressions for Ricci tensor...Generating symbolic expressions for BSSN RHSs...\n",
       "\n",
+      "\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Generating symbolic expressions for Ricci tensor...Generating symbolic expressions for Ricci tensor...\n",
+      "\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Generating symbolic expressions for Ricci tensor...\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating symbolic expressions for Ricci tensor...\n",
+      "(BENCH) Finished gamma constraint C codegen (FD_order=4) in 0.07747626304626465 seconds.\n",
+      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "(BENCH) Finished gamma constraint C codegen (FD_order=4) in 0.08715105056762695 seconds.\n",
+      "(BENCH) Finished BSSN RHS symbolic expressions in 0.9484210014343262 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=6,Tmunu=False) in Cartesian coordinates.\n",
+      "(BENCH) Finished BSSN RHS symbolic expressions in 0.9269177913665771 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.(BENCH) Finished BSSN RHS symbolic expressions in 0.9006772041320801 seconds.\n",
+      "\n",
+      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "(BENCH) Finished Ricci symbolic expressions in 1.4969866275787354 seconds.\n",
+      "(BENCH) Finished Ricci symbolic expressions in 1.4654872417449951 seconds.\n",
+      "(BENCH) Finished Ricci symbolic expressions in 1.457564353942871 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=6) in Cartesian coordinates.Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n",
+      "\n",
+      "(BENCH) Finished Ricci symbolic expressions in 1.4584240913391113 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
+      "(BENCH) Finished Ricci symbolic expressions in 1.4996705055236816 seconds.\n",
       "Generating C code for Ricci tensor (FD_order=8) in Cartesian coordinates.\n",
-      "(BENCH) Finished Ricci symbolic expressions in 1.4642906188964844 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=6) in Cartesian coordinates.\n",
-      "(BENCH) Finished Ricci symbolic expressions in 1.529653549194336 seconds.\n",
+      "(BENCH) Finished Ricci symbolic expressions in 1.4425320625305176 seconds.\n",
       "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
-      "(BENCH) Finished Ricci symbolic expressions in 1.557694911956787 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
-      "(BENCH) Finished Ricci symbolic expressions in 1.720848798751831 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n",
-      "(BENCH) Finished BSSN RHS symbolic expressions in 1.9063918590545654 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=True) in Cartesian coordinates.\n",
-      "(BENCH) Finished BSSN RHS symbolic expressions in 1.9633679389953613 seconds.\n",
+      "(BENCH) Finished BSSN RHS symbolic expressions in 1.8448643684387207 seconds.\n",
       "Generating C code for BSSN RHSs (FD_order=2,Tmunu=True) in Cartesian coordinates.\n",
+      "(BENCH) Finished BSSN RHS symbolic expressions in 1.999131441116333 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=True) in Cartesian coordinates.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=False) in 20.907254695892334 seconds.\n",
-      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=2,Tmunu=True) in 19.596866846084595 seconds.\n",
-      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=True) in 20.958932399749756 seconds.\n",
-      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=6,Tmunu=False) in 24.007999658584595 seconds.\n",
-      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=8,Tmunu=False) in 32.51337671279907 seconds.\n",
-      "(BENCH) Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 54.80400347709656 seconds.\n",
-      "(BENCH) Finished BSSN_RHS C codegen (FD_order=6,Tmunu=False) in 63.49832534790039 seconds.\n",
-      "(BENCH) Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 66.7704529762268 seconds.\n",
-      "(BENCH) Finished BSSN_RHS C codegen (FD_order=4,Tmunu=True) in 71.79878425598145 seconds.\n",
-      "(BENCH) Finished Ricci C codegen (FD_order=2) in 74.0669322013855 seconds.\n",
-      "(BENCH) Finished BSSN_RHS C codegen (FD_order=8,Tmunu=False) in 75.6638240814209 seconds.\n",
-      "(BENCH) Finished Ricci C codegen (FD_order=4) in 75.41487169265747 seconds.\n",
-      "(BENCH) Finished Ricci C codegen (FD_order=4) in 75.83160424232483 seconds.\n",
-      "(BENCH) Finished Ricci C codegen (FD_order=6) in 77.32509422302246 seconds.\n",
-      "(BENCH) Finished Ricci C codegen (FD_order=8) in 85.5490996837616 seconds.\n",
-      "(BENCH) Finished C kernel codegen for Baikal and BaikalVacuum in 87.49249124526978 seconds.\n"
+      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=False) in 20.788322925567627 seconds.\n",
+      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=2,Tmunu=True) in 19.8386549949646 seconds.\n",
+      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=True) in 21.34678053855896 seconds.\n",
+      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=6,Tmunu=False) in 24.61702561378479 seconds.\n",
+      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=8,Tmunu=False) in 32.500038862228394 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 55.51883912086487 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen (FD_order=6,Tmunu=False) in 63.62795829772949 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 67.36817479133606 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen (FD_order=4,Tmunu=True) in 71.32998061180115 seconds.\n",
+      "(BENCH) Finished Ricci C codegen (FD_order=2) in 74.02674555778503 seconds.\n",
+      "(BENCH) Finished Ricci C codegen (FD_order=4) in 75.35107970237732 seconds.\n",
+      "(BENCH) Finished Ricci C codegen (FD_order=4) in 75.40718698501587 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen (FD_order=8,Tmunu=False) in 76.47391963005066 seconds.\n",
+      "(BENCH) Finished Ricci C codegen (FD_order=6) in 78.10770273208618 seconds.\n",
+      "(BENCH) Finished Ricci C codegen (FD_order=8) in 85.39267778396606 seconds.\n",
+      "(BENCH) Finished C kernel codegen for Baikal and BaikalVacuum in 87.30659484863281 seconds.\n"
      ]
     }
    ],
@@ -2813,55 +2815,57 @@
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for Ricci tensor...\n",
-      "Generating symbolic expressions for Ricci tensor...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for Ricci tensor...\n",
       "Generating symbolic expressions for Ricci tensor...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating optimized C code (FD_order=2) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "(BENCH) Finished gamma constraint C codegen (FD_order=2) in 0.05112910270690918 seconds.\n",
-      "(BENCH) Finished BSSN RHS symbolic expressions in 0.9081428050994873 seconds.\n",
+      "Generating symbolic expressions for Ricci tensor...\n",
+      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "(BENCH) Finished gamma constraint C codegen (FD_order=4) in 0.04747486114501953 seconds.\n",
+      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "(BENCH) Finished gamma constraint C codegen (FD_order=4) in 0.08540916442871094 seconds.\n",
+      "(BENCH) Finished BSSN RHS symbolic expressions in 0.8993046283721924 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n",
+      "(BENCH) Finished BSSN RHS symbolic expressions in 0.902557373046875 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
+      "(BENCH) Finished BSSN RHS symbolic expressions in 0.9163200855255127 seconds.\n",
       "Generating C code for BSSN RHSs (FD_order=6,Tmunu=False) in Cartesian coordinates.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "(BENCH) Finished BSSN RHS symbolic expressions in 0.9813413619995117 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
-      "(BENCH) Finished BSSN RHS symbolic expressions in 1.1038997173309326 seconds.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n",
-      "(BENCH) Finished Ricci symbolic expressions in 1.4297635555267334 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
-      "(BENCH) Finished Ricci symbolic expressions in 1.4389934539794922 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n",
-      "(BENCH) Finished Ricci symbolic expressions in 1.469015121459961 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=6) in Cartesian coordinates.\n",
-      "(BENCH) Finished Ricci symbolic expressions in 1.5704190731048584 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
-      "(BENCH) Finished Ricci symbolic expressions in 1.6389472484588623 seconds.\n",
+      "(BENCH) Finished Ricci symbolic expressions in 1.4384350776672363 seconds.\n",
       "Generating C code for Ricci tensor (FD_order=8) in Cartesian coordinates.\n",
-      "(BENCH) Finished BSSN RHS symbolic expressions in 1.826596736907959 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=2,Tmunu=True) in Cartesian coordinates.\n",
-      "(BENCH) Finished BSSN RHS symbolic expressions in 1.8544893264770508 seconds.\n",
+      "(BENCH) Finished Ricci symbolic expressions in 1.446714162826538 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=6) in Cartesian coordinates.\n",
+      "(BENCH) Finished Ricci symbolic expressions in 1.4388189315795898 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
+      "(BENCH) Finished Ricci symbolic expressions in 1.4408912658691406 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
+      "(BENCH) Finished Ricci symbolic expressions in 1.5536212921142578 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n",
+      "(BENCH) Finished BSSN RHS symbolic expressions in 1.8549411296844482 seconds.\n",
       "Generating C code for BSSN RHSs (FD_order=4,Tmunu=True) in Cartesian coordinates.\n",
+      "(BENCH) Finished BSSN RHS symbolic expressions in 1.9635546207427979 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=2,Tmunu=True) in Cartesian coordinates.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=False) in 20.360071659088135 seconds.\n",
-      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=2,Tmunu=True) in 19.588061094284058 seconds.\n",
-      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=True) in 20.739661693572998 seconds.\n",
-      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=6,Tmunu=False) in 23.59068775177002 seconds.\n",
-      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=8,Tmunu=False) in 31.70930004119873 seconds.\n",
-      "(BENCH) Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 55.40840148925781 seconds.\n",
-      "(BENCH) Finished BSSN_RHS C codegen (FD_order=6,Tmunu=False) in 63.62300777435303 seconds.\n",
-      "(BENCH) Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 66.2190842628479 seconds.\n",
-      "(BENCH) Finished BSSN_RHS C codegen (FD_order=4,Tmunu=True) in 71.38984274864197 seconds.\n",
-      "(BENCH) Finished Ricci C codegen (FD_order=2) in 72.47659015655518 seconds.\n",
-      "(BENCH) Finished Ricci C codegen (FD_order=4) in 73.34557580947876 seconds.\n",
-      "(BENCH) Finished Ricci C codegen (FD_order=4) in 74.41760396957397 seconds.\n",
-      "(BENCH) Finished BSSN_RHS C codegen (FD_order=8,Tmunu=False) in 76.11427426338196 seconds.\n",
-      "(BENCH) Finished Ricci C codegen (FD_order=6) in 76.41674518585205 seconds.\n",
-      "(BENCH) Finished Ricci C codegen (FD_order=8) in 85.42249631881714 seconds.\n",
-      "Finished C kernel codegen for Baikal and BaikalVacuum in 87.17254495620728 seconds.\n",
+      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=False) in 20.201477527618408 seconds.\n",
+      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=2,Tmunu=True) in 19.364072561264038 seconds.\n",
+      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=True) in 20.664037466049194 seconds.\n",
+      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=6,Tmunu=False) in 23.727725505828857 seconds.\n",
+      "(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=8,Tmunu=False) in 32.03964424133301 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 54.699613094329834 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen (FD_order=6,Tmunu=False) in 62.276713848114014 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 65.87314796447754 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen (FD_order=4,Tmunu=True) in 70.69322490692139 seconds.\n",
+      "(BENCH) Finished Ricci C codegen (FD_order=2) in 72.78947687149048 seconds.\n",
+      "(BENCH) Finished Ricci C codegen (FD_order=4) in 73.8634877204895 seconds.\n",
+      "(BENCH) Finished Ricci C codegen (FD_order=4) in 73.87485790252686 seconds.\n",
+      "(BENCH) Finished BSSN_RHS C codegen (FD_order=8,Tmunu=False) in 75.25774097442627 seconds.\n",
+      "(BENCH) Finished Ricci C codegen (FD_order=6) in 76.78837418556213 seconds.\n",
+      "(BENCH) Finished Ricci C codegen (FD_order=8) in 83.54171323776245 seconds.\n",
+      "Finished C kernel codegen for Baikal and BaikalVacuum in 85.07177805900574 seconds.\n",
       "Finished generating Baikal and BaikalVacuum Einstein Toolkit thorns!\n"
      ]
     }
@@ -2915,6 +2919,7 @@
       "PASSED: validate/BaikalVacuum/src/driver_enforcedetgammabar_constraint.c matches trusted version\n",
       "PASSED: validate/BaikalVacuum/src/driver_pt1_BSSN_Ricci.c matches trusted version\n",
       "PASSED: validate/BaikalVacuum/src/driver_pt2_BSSN_RHSs.c matches trusted version\n",
+      "PASSED: validate/BaikalVacuum/src/enforcedetgammabar_constraint.h matches trusted version\n",
       "PASSED: validate/BaikalVacuum/src/floor_the_lapse.c matches trusted version\n",
       "PASSED: validate/BaikalVacuum/src/make.code.defn matches trusted version\n",
       "PASSED: validate/BaikalVacuum/src/zero_rhss.c matches trusted version\n",
