from sympy import * now only imports needed functions and global variables, to avoid polluting namespace

--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -193,7 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WeylScal4NRPy/src/WeylScal4NRPy.c\n"
+      "Overwriting WeylScal4NRPy/src/WeylScal4NRPy.c\n"
      ]
     }
    ],
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WeylScal4NRPy/interface.ccl\n"
+      "Overwriting WeylScal4NRPy/interface.ccl\n"
      ]
     }
    ],
@@ -366,7 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WeylScal4NRPy/param.ccl\n"
+      "Overwriting WeylScal4NRPy/param.ccl\n"
      ]
     }
    ],
@@ -409,7 +409,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WeylScal4NRPy/schedule.ccl\n"
+      "Overwriting WeylScal4NRPy/schedule.ccl\n"
      ]
     }
    ],
@@ -491,7 +491,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WeylScal4NRPy/src/make.code.defn\n"
+      "Overwriting WeylScal4NRPy/src/make.code.defn\n"
      ]
     }
    ],
@@ -549,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
