--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -144,7 +144,8 @@
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
-    "from outputC import *            # NRPy+: Core C code output module"
+    "from outputC import *            # NRPy+: Core C code output module\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends"
    ]
   },
   {
