--- a/Tutorial-SommerfeldBoundaryCondition.ipynb
+++ b/Tutorial-SommerfeldBoundaryCondition.ipynb
@@ -74,10 +74,12 @@
    "outputs": [],
    "source": [
     "# Step P1: Import needed NRPy+ core modules:\n",
-    "from outputC import * # Needed for lhrh() named tuple\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
+    "from outputC import *            # NRPy+: Basic C code output functionality (needed for lhrh() named tuple)\n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
     "\n",
@@ -916,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
