--- a/Tutorial-ADM_in_terms_of_BSSN.ipynb
+++ b/Tutorial-ADM_in_terms_of_BSSN.ipynb
@@ -80,6 +80,7 @@
    "source": [
     "# Step 1.a: Import all needed modules from NRPy+\n",
     "from outputC import *             # NRPy+: Core C code output module\n",
+    "import NRPy_param_funcs as par    # NRPy+: parameter interface\n",
     "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import indexedexp as ixp          # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import reference_metric as rfm    # NRPy+: Reference metric support\n",
@@ -533,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
