--- a/Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb
+++ b/Tutorial-BSSN-Enforcing_Determinant_gammabar_equals_gammahat_Constraint.ipynb
@@ -72,6 +72,7 @@
     "# Step P1: import all needed modules from NRPy+:\n",
     "from outputC import *             # NRPy+: Core C code output module\n",
     "import finite_difference as fin   # NRPy+: Finite difference C code generation module\n",
+    "import NRPy_param_funcs as par    # NRPy+: parameter interface\n",
     "import grid as gri                # NRPy+: Functions having to do with numerical grids\n",
     "import indexedexp as ixp          # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import reference_metric as rfm    # NRPy+: Reference metric support\n",
@@ -280,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
