--- a/Tutorial-BSSN_in_terms_of_ADM.ipynb
+++ b/Tutorial-BSSN_in_terms_of_ADM.ipynb
@@ -75,6 +75,7 @@
    "source": [
     "# Step 1: Import needed core NRPy+ modules\n",
     "from outputC import *             # NRPy+: Core C code output module\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import NRPy_param_funcs as par    # NRPy+: Parameter interface\n",
     "import indexedexp as ixp          # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import reference_metric as rfm    # NRPy+: Reference metric support\n",
@@ -522,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
