--- a/Tutorial-ETK_thorn-MaxwellEvol.ipynb
+++ b/Tutorial-ETK_thorn-MaxwellEvol.ipynb
@@ -228,7 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing MaxwellEvol/src/MaxwellEvol.c\n"
+      "Overwriting MaxwellEvol/src/MaxwellEvol.c\n"
      ]
     }
    ],
@@ -460,7 +460,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing MaxwellEvol/interface.ccl\n"
+      "Overwriting MaxwellEvol/interface.ccl\n"
      ]
     }
    ],
@@ -542,7 +542,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing MaxwellEvol/param.ccl\n"
+      "Overwriting MaxwellEvol/param.ccl\n"
      ]
     }
    ],
@@ -613,7 +613,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing MaxwellEvol/schedule.ccl\n"
+      "Overwriting MaxwellEvol/schedule.ccl\n"
      ]
     }
    ],
@@ -737,7 +737,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing MaxwellEvol/src/make.code.defn\n"
+      "Overwriting MaxwellEvol/src/make.code.defn\n"
      ]
     }
    ],
@@ -805,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
