--- a/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
+++ b/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
@@ -177,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WaveToyNRPy/src/WaveToyNRPy.c\n"
+      "Overwriting WaveToyNRPy/src/WaveToyNRPy.c\n"
      ]
     }
    ],
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WaveToyNRPy/interface.ccl\n"
+      "Overwriting WaveToyNRPy/interface.ccl\n"
      ]
     }
    ],
@@ -365,7 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WaveToyNRPy/param.ccl\n"
+      "Overwriting WaveToyNRPy/param.ccl\n"
      ]
     }
    ],
@@ -430,7 +430,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WaveToyNRPy/schedule.ccl\n"
+      "Overwriting WaveToyNRPy/schedule.ccl\n"
      ]
     }
    ],
@@ -505,7 +505,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WaveToyNRPy/src/make.code.defn\n"
+      "Overwriting WaveToyNRPy/src/make.code.defn\n"
      ]
     }
    ],
@@ -690,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
