--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -206,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing sbPoynETNRPy/src/sbPoynETNRPy.c\n"
+      "Overwriting sbPoynETNRPy/src/sbPoynETNRPy.c\n"
      ]
     }
    ],
@@ -311,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing sbPoynETNRPy/interface.ccl\n"
+      "Overwriting sbPoynETNRPy/interface.ccl\n"
      ]
     }
    ],
@@ -372,7 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing sbPoynETNRPy/param.ccl\n"
+      "Overwriting sbPoynETNRPy/param.ccl\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing sbPoynETNRPy/schedule.ccl\n"
+      "Overwriting sbPoynETNRPy/schedule.ccl\n"
      ]
     }
    ],
@@ -487,7 +487,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing sbPoynETNRPy/src/make.code.defn\n"
+      "Overwriting sbPoynETNRPy/src/make.code.defn\n"
      ]
     }
    ],
@@ -545,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
