--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -252,6 +252,7 @@
    "source": [
     "import sympy as sp               # SymPy, Python's core symbolic algebra package on which NRPy+ depends\n",
     "from outputC import *            # NRPy+: Core C code output module\n",
+    "import NRPy_param_funcs as par   # NRPy+: parameter interface\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
@@ -333,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
