--- a/Tutorial-GRFFE_Equations-Cartesian.ipynb
+++ b/Tutorial-GRFFE_Equations-Cartesian.ipynb
@@ -147,6 +147,7 @@
    "source": [
     "# Step 1: Import needed core NRPy+ modules\n",
     "from outputC import *            # NRPy+: Core C code output module\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support"
    ]
   },
@@ -836,7 +837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
