--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -348,6 +348,7 @@
     "# Step P1: Import needed NRPy+ core modules:\n",
     "from outputC import *            # NRPy+: Core C code output module\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import reference_metric as rfm   # NRPy+: Reference metric support\n",
@@ -1604,10 +1605,10 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -O2 -g -fopenmp CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "(BENCH): Finished executing in 0.4091978073120117 seconds.\n",
+      "(BENCH): Finished executing in 0.4088115692138672 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "(BENCH): Finished executing in 0.20784926414489746 seconds.\n",
+      "(BENCH): Finished executing in 0.20811247825622559 seconds.\n",
       "(BENCH) Finished this code cell.\n"
      ]
     }
@@ -1656,19 +1657,19 @@
       "Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "(BENCH): Finished executing in 0.6093277931213379 seconds.\n",
+      "(BENCH): Finished executing in 0.6096880435943604 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "(BENCH): Finished executing in 0.2072606086730957 seconds.\n",
+      "(BENCH): Finished executing in 0.20777034759521484 seconds.\n",
       "Wrote to file \"CurviBoundaryConditions_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
       "Wrote to file \"CurviBoundaryConditions_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "(BENCH): Finished executing in 0.6101601123809814 seconds.\n",
+      "(BENCH): Finished executing in 0.6098864078521729 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "(BENCH): Finished executing in 0.20828914642333984 seconds.\n",
+      "(BENCH): Finished executing in 0.20812320709228516 seconds.\n",
       "(BENCH) Finished this code cell.\n",
       "\n",
       "\n",
@@ -1770,7 +1771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
