NRPyPN: Force "from NRPyPN_shortcuts import *" to import only global variables and functions, to prevent namespace pollution

--- a/NRPyPN/NRPyPN_shortcuts.ipynb
+++ b/NRPyPN/NRPyPN_shortcuts.ipynb
@@ -102,6 +102,9 @@
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "\n",
+    "__all__ = ['m1','m2','S1U','S2U','pU','nU','drdt','Pt','Pr','r','q','chi1U','chi2U','gamma_EulerMascheroni',\n",
+    "           'n12U','n21U','p1U','p2U','define_LeviCivitaSymbol_rank3_dim3','dot','cross','div','num_eval']\n",
+    "\n",
     "# Step 1: Declare several global variables used throughout\n",
     "#         NRPyPN\n",
     "m1,m2 = sp.symbols('m1 m2',real=True)\n",
@@ -373,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
