--- a/NRPyPN/PN-Hamiltonian-Spin-Orbit.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Spin-Orbit.ipynb
@@ -94,6 +94,7 @@
     "    sys.path.append(nrpy_dir_path)\n",
     "import indexedexp as ixp  # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "from NRPyPN_shortcuts import *  # NRPyPN: shortcuts for e.g., vector operations\n",
+    "import sympy as sp              # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "\n",
     "# 1.5PN spin-orbit coupling term, from Eq. 4.11a of \n",
     "#    Damour, Jaranowski, and Schäfer (2008)\n",
