--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -128,21 +128,28 @@
     "x_2 &\\in [x_{2,\\ \\rm min},x_{2,\\ \\rm max}],\n",
     "\\end{align}\n",
     "\n",
-    "${\\rm NGHOSTS}$ to be the number of ghost zones (assumed the same in all directions), and $\\{Nx_0,Nx_1,Nx_2\\}$ to be the desired number of points in the grid interior in the $\\{x_0,x_1,x_2\\}$ directions, respectively, then the numerical grid spacing in each respective direction will be given by\n",
+    "${\\rm NGHOSTS}$ to be the number of ghost zones (assumed the same in all directions), and $\\{N_0,N_1,N_2\\}$ to be the desired number of points in the grid interior in the $\\{x_0,x_1,x_2\\}$ directions, respectively, then the numerical grid spacing in each respective direction will be given by\n",
     "\n",
     "\\begin{align}\n",
-    "dx_0 &= \\frac{x_{0,\\ \\rm max} - x_{0,\\ \\rm min}}{Nx_0} \\\\\n",
-    "dx_1 &= \\frac{x_{1,\\ \\rm max} - x_{1,\\ \\rm min}}{Nx_1} \\\\\n",
-    "dx_2 &= \\frac{x_{2,\\ \\rm max} - x_{2,\\ \\rm min}}{Nx_2}.\n",
+    "dx_0 &= \\frac{x_{0,\\ \\rm max} - x_{0,\\ \\rm min}}{N_0} \\\\\n",
+    "dx_1 &= \\frac{x_{1,\\ \\rm max} - x_{1,\\ \\rm min}}{N_1} \\\\\n",
+    "dx_2 &= \\frac{x_{2,\\ \\rm max} - x_{2,\\ \\rm min}}{N_2}.\n",
     "\\end{align}\n",
     "\n",
-    "Given the above definitions, the complete set of points $\\{{\\rm i0},{\\rm i1},{\\rm i2}\\}$ located at $\\{x_{0,{\\rm i0}},x_{1,{\\rm i1}},x_{2,{\\rm i2}}\\}$ as follows:\n",
+    "Given the above definitions, the complete set of indices $\\{{\\rm i0},{\\rm i1},{\\rm i2}\\}$ located at $\\{x_{0,{\\rm i0}},x_{1,{\\rm i1}},x_{2,{\\rm i2}}\\}$ as follows:\n",
     "\n",
     "\\begin{align}\n",
     "x_{0,{\\rm i0}} &= x_{0,\\ \\rm min} + \\left[({\\rm i0}-{\\rm NGHOSTS}) + \\frac{1}{2}\\right] dx_0 \\\\\n",
     "x_{1,{\\rm i1}} &= x_{1,\\ \\rm min} + \\left[({\\rm i1}-{\\rm NGHOSTS}) + \\frac{1}{2}\\right] dx_1 \\\\\n",
     "x_{2,{\\rm i2}} &= x_{2,\\ \\rm min} + \\left[({\\rm i2}-{\\rm NGHOSTS}) + \\frac{1}{2}\\right] dx_2 \\\\\n",
-    "\\end{align}"
+    "\\end{align}\n",
+    "where\n",
+    "\n",
+    "* ${\\rm i0}\\in [0,N_0+2\\cdot{\\rm NGHOSTS})$\n",
+    "* ${\\rm i1}\\in [0,N_1+2\\cdot{\\rm NGHOSTS})$\n",
+    "* ${\\rm i2}\\in [0,N_2+2\\cdot{\\rm NGHOSTS})$,\n",
+    "\n",
+    "which guarantees the interior is covered by exactly $\\{N_0,N_1,N_2\\}$ grid points, the boundaries are covered by ${\\rm NGHOSTS}$ ghost zones, and we maintain cell centering."
    ]
   },
   {
@@ -164,10 +171,10 @@
     "&= -\\pi + \\left[({\\rm i2}-3) + \\frac{1}{2}\\right] dx_2, \\\\\n",
     "\\end{align}\n",
     "\n",
-    "where \n",
-    "* ${\\rm i0}$ ranges from $0$ to $N_r+2{\\rm NGHOSTS}$\n",
-    "* ${\\rm i1}$ ranges from $0$ to $N_\\theta+2{\\rm NGHOSTS}$\n",
-    "* ${\\rm i2}$ ranges from $0$ to $N_\\phi+2{\\rm NGHOSTS}$,\n",
+    "where again\n",
+    "* ${\\rm i0}\\in [0,N_r+2\\cdot{\\rm NGHOSTS})$\n",
+    "* ${\\rm i1}\\in [0,N_\\theta+2\\cdot{\\rm NGHOSTS})$\n",
+    "* ${\\rm i2}\\in [0,N_\\phi+2\\cdot{\\rm NGHOSTS})$,\n",
     "\n",
     "which guarantees the interior is covered by exactly $\\{N_r,N_\\theta,N_\\phi\\}$ grid points, the boundaries are covered by ${\\rm NGHOSTS}$ ghost zones, and we maintain cell centering.\n",
     "\n",
