Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb: Update text for clarity

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So for example, if we choose a numerical grid in *spherical* coordinates $\\{r,\\theta,\\phi\\}$, with the 3 outer ghost zone points (needed for e.g., 6th-order-accurate centered finite differencing), and we want the grid interior to be sampled with $\\{N_r,N_\\theta,N_\\phi\\}$ grid points, then we have\n",
+    "So for example, if we choose a numerical grid in *spherical* coordinates $\\{r,\\theta,\\phi\\}$, with 3 ghost zone points (needed for e.g., 6th-order-accurate centered finite differencing), and we want the grid interior to be sampled with $\\{N_r,N_\\theta,N_\\phi\\}$ grid points, then we have\n",
     "\n",
     "\\begin{align}\n",
     "{\\rm NGHOSTS} &= 3 \\\\\n",
