Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb: Improve exercise to student

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -180,7 +180,7 @@
     "\n",
     "Notice that in NRPy+, we use the [physics](https://en.wikipedia.org/wiki/Spherical_coordinate_system) notation for spherical coordinates, where $\\theta$ is the polar and $\\phi$ is the azimuthal angle. Also we choose $\\phi$ to range from $-\\pi$ to $+\\pi$, which is most useful since it is compatible with output from [`atan2`](https://en.wikipedia.org/wiki/Atan2).\n",
     "\n",
-    "**Exercise to student**: Given the prescription above, why do the integers $\\left(\\rm{i0},\\rm{i1},\\rm{i2}\\right)$ need to be even?\n",
+    "**Exercise to student**: Given the prescription above, why do the integers $N_\\theta$ and $N_\\phi$ need to be even?\n",
     "\n",
     "As Laplacians like these appear on the right-hand sides of, e.g., the scalar wave equation in curvilinear coordinates, we still have a problem of some terms becoming quite large as the coordinate singularity is approached. This issue manifests as a stiffening of the PDE, requiring that we be very careful about the precise [Method of Lines](Tutorial-Method_of_Lines-C_Code_Generation.ipynb) timestepping algorithm used. See [Cordero-Carrión & Cerdá-Durán](https://arxiv.org/abs/1211.5930) for information on dealing with this subtlety in a second-order Runge-Kutta Method of Lines context; it was later found that the standard RK4 method maintain stable solutions to PDEs affected by this sort of stiffening.\n",
     "\n",
