ScalarWave notebooks: replace references to deprecated InitialData_PlaneWave to updated InitialData

--- a/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
+++ b/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "### NRPy+ Source Code for this module: \n",
     "* [ScalarWave/ScalarWave_RHSs.py](../edit/ScalarWave/ScalarWave_RHSs.py) [\\[**tutorial**\\]](Tutorial-ScalarWave.ipynb) \n",
-    "* [ScalarWave/InitialData_PlaneWave.py](../edit/ScalarWave/InitialData_PlaneWave.py) [\\[**tutorial**\\]](Tutorial-ScalarWave.ipynb)\n",
+    "* [ScalarWave/InitialData.py](../edit/ScalarWave/InitialData.py) [\\[**tutorial**\\]](Tutorial-ScalarWave.ipynb)\n",
     "\n",
     "## Introduction:\n",
     "This tutorial notebook focuses on how to construct an Einstein Toolkit (ETK) thorn (module) that will set up the expressions for the right-hand sides of $\\partial_t u$ and $\\partial_t v$ for the scalar wave equation, as defined in the [Tutorial-ScalarWave.ipynb](Tutorial-ScalarWave.ipynb) NRPy+ tutorial notebook. In that module, we used NRPy+ to contruct the SymPy expressions for these scalar wave \"time-evolution equations\". This thorn is largely based on and should function similarly to the $\\text{WaveToyC}$ thorn included in the Einstein Toolkit (ETK) $\\text{CactusWave}$ arrangement.\n",
@@ -177,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WaveToyNRPy/src/WaveToyNRPy.c\n"
+      "Writing WaveToyNRPy/src/WaveToyNRPy.c\n"
      ]
     }
    ],
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WaveToyNRPy/interface.ccl\n"
+      "Writing WaveToyNRPy/interface.ccl\n"
      ]
     }
    ],
@@ -365,7 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WaveToyNRPy/param.ccl\n"
+      "Writing WaveToyNRPy/param.ccl\n"
      ]
     }
    ],
@@ -430,7 +430,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WaveToyNRPy/schedule.ccl\n"
+      "Writing WaveToyNRPy/schedule.ccl\n"
      ]
     }
    ],
@@ -505,7 +505,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting WaveToyNRPy/src/make.code.defn\n"
+      "Writing WaveToyNRPy/src/make.code.defn\n"
      ]
     }
    ],
