--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -18,7 +18,7 @@
     "## Author: Zach Etienne\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "## This module solves the scalar wave equation for a plane wave in *spherical coordinates* (though other coordinates, including Cartesian, may be chosen).\n",
+    "## This module solves the scalar wave equation in *spherical coordinates* (though other coordinates, including Cartesian, may be chosen).\n",
     "\n",
     "**Notebook Status:** <font color =\"green\"><b> Validated </b></font>\n",
     "\n",
@@ -26,7 +26,7 @@
     "\n",
     "### NRPy+ Source Code for this module: \n",
     "* [ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py](../edit/ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py) [\\[**tutorial**\\]](Tutorial-ScalarWaveCurvilinear.ipynb) Generates the right-hand side for the Scalar Wave Equation in curvilinear coordinates\n",
-    "* [ScalarWave/InitialData_PlaneWave.py](../edit/ScalarWave/InitialData_PlaneWave.py) [\\[**tutorial**\\]](Tutorial-ScalarWave.ipynb) Generating C code for plane wave initial data for the scalar wave equation \n",
+    "* [ScalarWave/InitialData.py](../edit/ScalarWave/InitialData.py) [\\[**tutorial**\\]](Tutorial-ScalarWave.ipynb) Generating C code for either plane wave or spherical Gaussian initial data for the scalar wave equation \n",
     "\n",
     "## Introduction:\n",
     "As outlined in the [previous NRPy+ tutorial notebook](Tutorial-ScalarWaveCurvilinear.ipynb), we first use NRPy+ to generate initial data for the scalar wave equation, and then we use it to generate the RHS expressions for [Method of Lines](https://reference.wolfram.com/language/tutorial/NDSolveMethodOfLines.html) time integration based on the [explicit Runge-Kutta fourth-order scheme](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods) (RK4).\n",
@@ -95,7 +95,7 @@
     "where $\\hat{g}^{ij}$ is the inverse reference 3-metric (i.e., the metric corresponding to the underlying coordinate system we choose$-$spherical coordinates in our example below), and $\\hat{\\Gamma}^i$ is the contracted Christoffel symbol $\\hat{\\Gamma}^\\tau = \\hat{g}^{\\mu\\nu} \\hat{\\Gamma}^\\tau_{\\mu\\nu}$.\n",
     "\n",
     "Below we generate \n",
-    "+ the initial data by calling `InitialData_PlaneWave()` inside the NRPy+ [ScalarWave/InitialData_PlaneWave.py](../edit/ScalarWave/InitialData_PlaneWave.py) module (documented in [this NRPy+ Jupyter notebook](Tutorial-ScalarWave.ipynb)), and \n",
+    "+ the initial data by calling `InitialData(Type=\"PlaneWave\")` inside the NRPy+ [ScalarWave/InitialData.py](../edit/ScalarWave/InitialData.py) module (documented in [this NRPy+ Jupyter notebook](Tutorial-ScalarWave.ipynb)), and \n",
     "+ the RHS expressions by calling `ScalarWaveCurvilinear_RHSs()` inside the NRPy+ [ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py](../edit/ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py) module (documented in [this NRPy+ Jupyter notebook](Tutorial-ScalarWaveCurvilinear.ipynb))."
    ]
   },
@@ -205,7 +205,7 @@
     "\n",
     "# Step 4: Import the ScalarWave.InitialData module. \n",
     "#         This command only declares ScalarWave initial data \n",
-    "#         parameters and the InitialData_PlaneWave() function.\n",
+    "#         parameters and the InitialData() function.\n",
     "import ScalarWave.InitialData as swid\n",
     "\n",
     "# Step 5: Import ScalarWave_RHSs module. \n",
