latex_parser.py: added equation support; fixed unreachable error for unsupported command

--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -48,6 +48,7 @@
     "\n",
     "In the following section, we discuss [lexical analysis](https://en.wikipedia.org/wiki/Lexical_analysis) (lexing) and [syntax analysis](https://en.wikipedia.org/wiki/Parsing) (parsing). In the process of lexical analysis, a lexer will tokenize a character string, called a sentence, using substring pattern matching (or tokenizing). We implemented a regex-based lexer for NRPy+, which does pattern matching using a [regular expression](https://en.wikipedia.org/wiki/Regular_expression) for each token pattern. In the process of syntax analysis, a parser will receive a token iterator from the lexer and build a parse tree containing all syntactic information of the language, as specified by a [formal grammar](https://en.wikipedia.org/wiki/Formal_grammar). We implemented a [recursive descent parser](https://en.wikipedia.org/wiki/Recursive_descent_parser) for NRPy+, which will build a parse tree in [preorder](https://en.wikipedia.org/wiki/Tree_traversal#Pre-order_(NLR)), starting from the root [nonterminal](https://en.wikipedia.org/wiki/Terminal_and_nonterminal_symbols), using a [right recursive](https://en.wikipedia.org/wiki/Left_recursion) grammar. The following right recursive, [context-free grammar](https://en.wikipedia.org/wiki/Context-free_grammar) was written for parsing [LaTeX](https://en.wikipedia.org/wiki/LaTeX), adhering to the canonical (extended) [BNF](https://en.wikipedia.org/wiki/Backus%E2%80%93Naur_form) notation used for describing a context-free grammar:\n",
     "```\n",
+    "<ROOT>          -> <VARIABLE> = <EXPR> | <EXPR>\n",
     "<EXPR>          -> [ - ] <TERM> { ( + | - ) <TERM> }\n",
     "<TERM>          -> <FACTOR> { [ ( / | ^ ) ] <FACTOR> }\n",
     "<FACTOR>        -> <OPERAND> | (<EXPR>) | [<EXPR>]\n",
@@ -155,12 +156,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the sandbox code cell below, you can experiment with the LaTeX parser using the wrapper function parse(sentence), where sentence must be a [raw string](https://docs.python.org/3/reference/lexical_analysis.html) to interpret a backslash as a literal character rather than an [escape sequence](https://en.wikipedia.org/wiki/Escape_sequence)."
+    "In addition to expression parsing, we included support for equation parsing, which will return a dictionary mapping LHS $\\mapsto$ RHS where LHS must be a symbol."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{x: 2**(n/2)*n}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(parse(r'x = n\\sqrt{2}^n'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{x_1: x + 1, x_2: x + 2, x_3: x + 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "eqn_list = [r'x_1 = x + 1', r'x_2 = x + 2', r'x_3 = x + 3']\n",
+    "\n",
+    "var_map  = parse(eqn_list[0])\n",
+    "for eqn in eqn_list:\n",
+    "    var_map.update(parse(eqn))\n",
+    "print(var_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We implemented robust error messaging, using the custom `ParseError` exception, which should handle every conceivable case to identify, as detailed as possible, invalid syntax inside of a LaTeX sentence. The following are runnable examples of possible error messages (simply uncomment and run the cell):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parse(r'\\sqrt[*]{2}')\n",
+    "    # ParseError: \\sqrt[*]{2}\n",
+    "    #                   ^\n",
+    "    # unexpected '*' at position 6\n",
+    "    \n",
+    "# parse(r'\\sqrt[0.5]{2}')\n",
+    "    # ParseError: \\sqrt[0.5]{2}\n",
+    "    #                   ^\n",
+    "    # expected token INTEGER at position 6\n",
+    "    \n",
+    "# parse(r'\\command{}')\n",
+    "    # ParseError: \\command{}\n",
+    "    #             ^\n",
+    "    # unsupported command '\\command' at position 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the sandbox code cell below, you can experiment with the LaTeX parser using the wrapper function parse(sentence), where sentence must be a [raw string](https://docs.python.org/3/reference/lexical_analysis.html) to interpret a backslash as a literal character rather than an [escape sequence](https://en.wikipedia.org/wiki/Escape_sequence)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
