--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -47,6 +47,7 @@
     "Throughout this module, we will refer to\n",
     "* [Barausse and Buonanno (2010)](https://arxiv.org/abs/0912.3517) as BB2010,\n",
     "* [Barausse and Buonanno (2011)](https://arxiv.org/abs/1107.2904) as BB2011,\n",
+    "* [Steinhoff, Hinderer, Buonanno, et al (2016)](https://arxiv.org/abs/1608.01907) as SH2016,\n",
     "* [Pan, Buonanno, Buchman, et. al. 2010](https://arxiv.org/abs/0912.3466v2) as P2010,\n",
     "* [Taracchini, Buonanno, Pan, et al (2014)](https://arxiv.org/abs/1311.2544) as T2014,\n",
     "* [Taracchini, Pan, Buonanno, et al (2012)](https://arxiv.org/abs/1202.0790) as T2012, and\n",
@@ -233,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting SEOBNR/Hamiltonian-Hreal_on_top.txt\n"
+      "Writing SEOBNR/Hamiltonian-Hreal_on_top.txt\n"
      ]
     }
    ],
@@ -3294,7 +3295,7 @@
     "    \\Delta_u\\ {\\rm calibration\\ term} = 1 + \\eta \\left[ \\Delta_{0} + \\log \\left( 1 + \\Delta_{1} u + \\Delta_{2} u^{2} + \\Delta_{3} u^{3} + \\Delta_{4} u^{4} + \\Delta_{5} u^{5} \\right) \\right].\n",
     "\\end{equation*}\n",
     "\n",
-    "<font color='red'>In the LALSuite code itself (see LALSimIMRSpinEOBHamiltonianPrec.c line 274 on Git commit a70b43d), there's one more term ($\\Delta_{5\\ell}$), for which documentation is elusive.</font>  That bring us to\n",
+    "The first term in the brackets of [SH2016](https://arxiv.org/abs/1608.01907) Equation (A2c) is $\\Delta_{5\\ell}$.  That bring us to\n",
     "\n",
     "\\begin{equation*}\n",
     "    \\Delta_u\\ {\\rm calibration\\ term} = 1 + \\eta \\left[ \\Delta_{0} + \\log \\left( 1 + \\underbrace{ \\Delta_{1} u + \\Delta_{2} u^{2} + \\Delta_{3} u^{3} + \\Delta_{4} u^{4} + \\Delta_{5} u^{5} + \\Delta_{5\\ell} u^{5} \\ln\\left(u\\right) }_{ \\rm logarg } \\right) \\right].\n",
@@ -3349,9 +3350,9 @@
     "        &= -\\frac{1}{3}\\Delta_{1}^{3} + \\left( \\eta K - 1 \\right) \\Delta_{1}^{2} + \\Delta_{2} \\Delta_{1} - 2 \\left( \\eta K - 1 \\right) \\left( \\Delta_{2}- \\left( \\eta K - 1 \\right) \\right) - \\frac{ a^{2} }{ M^{2} } \\left( \\eta K - 1 \\right)^{2} \\Delta_{1} \\\\\n",
     "    \\Delta_{4} &= \\frac{1}{12} \\left\\{ 6 \\frac{ a^{2} }{ M^{2} } \\left( \\Delta_{1}^{2} - 2 \\Delta_{2} \\right) \\left( \\eta K - 1 \\right)^{2} + 3 \\Delta_{1}^{4} - 8 \\left( \\eta K - 1 \\right) \\Delta_{1}^{3} - 12 \\Delta_{2} \\Delta_{1}^{2} + 12 \\left[ 2 \\left( \\eta K - 1 \\right) \\Delta_{2} + \\Delta_{3} \\right] \\Delta_{1} \\right.\\\\\n",
     "        &\\left.\\ \\ \\ \\ \\ + 12 \\left( \\frac{94}{3} - \\frac{41}{32} \\pi^{2} \\right) \\left( \\eta K - 1 \\right)^{2} + 6 \\left[ \\Delta_{2}^{2} - 4 \\Delta_{3} \\left( \\eta K - 1 \\right) \\right] \\right\\} \\\\\n",
-    "    \\Delta_{5} &= \\left( \\eta K - 1 \\right)^{2} \\left\\{ \\left( -\\frac{4237}{60} + \\frac{128}{5}\\gamma + \\frac{2275}{512} \\pi^{2} - \\frac{1}{3} a^{2} \\left\\{ \\Delta_{1}^{3} - 3 \\Delta_{1} \\Delta_{2} + 3 \\Delta_{3} \\right\\} \\right.\\right. \\\\\n",
+    "    \\Delta_{5} &= \\left( \\eta K - 1 \\right)^{2} \\left( -\\frac{4237}{60} + \\frac{128}{5}\\gamma + \\frac{2275}{512} \\pi^{2} - \\frac{1}{3} a^{2} \\left\\{ \\Delta_{1}^{3} - 3 \\Delta_{1} \\Delta_{2} + 3 \\Delta_{3} \\right\\} \\right. \\\\\n",
     "        &\\ \\ \\ \\ \\ - \\frac{ \\Delta_{1}^{5} - 5 \\Delta_{1}^{3} \\Delta_{2} + 5 \\Delta_{1} \\Delta_{2}^{2} + 5 \\Delta_{1}^{2} \\Delta_{3} - 5 \\Delta_{2} \\Delta_{3} - 5 \\Delta_{1} \\Delta_{4} }{ 5 \\left( \\eta K - 1 \\right)^{2} } \\\\\n",
-    "         &\\left.\\left.\\ \\ \\ \\ \\  + \\frac{ \\Delta_{1}^{4} - 4 \\Delta_{1}^{2}  \\Delta_{2} + 2 \\Delta_{2}^{2} + 4 \\Delta_{1} \\Delta_{3} - 4 \\Delta_{4} }{ 2\\left( \\eta K - 1 \\right) } + \\frac{256}{5} \\log(2) \\right) + \\frac{64}{5} \\log(u) \\right\\} \\\\\n",
+    "         &\\left.\\ \\ \\ \\ \\  + \\frac{ \\Delta_{1}^{4} - 4 \\Delta_{1}^{2}  \\Delta_{2} + 2 \\Delta_{2}^{2} + 4 \\Delta_{1} \\Delta_{3} - 4 \\Delta_{4} }{ 2\\left( \\eta K - 1 \\right) } + \\frac{256}{5} \\log(2) \\right) \\\\\n",
     "        \\Delta_{5\\ell} &= \\frac{64}{5} \\left( \\eta K - 1 \\right)^{2}.\n",
     "\\end{align*}\n",
     "\n",
@@ -4457,7 +4458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
