NRPyPN: Replace all "from NRPyPN_shortcuts import *" with the appropriate restricted expressions. Also remove definition of __all__ since it's never used

--- a/NRPyPN/PN-dE_GW_dt_and_dM_dt.ipynb
+++ b/NRPyPN/PN-dE_GW_dt_and_dM_dt.ipynb
@@ -29,7 +29,6 @@
     "1. [PN_dE_GW_dt_and_dM_dt.py](../../edit/NRPyPN/PN_dE_GW_dt_and_dM_dt.py)\n",
     "\n",
     "### This notebook & corresponding Python module depend on the following NRPy+/NRPyPN Python modules:\n",
-    "1. [outputC.py](../../edit/outputC.py): [**documentation+tutorial**](../Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "1. [indexedexp.py](../../edit/indexedexp.py): [**documentation+tutorial**](../Tutorial-Indexed_Expressions.ipynb)\n",
     "1. [NRPyPN_shortcuts.py](../../edit/NRPyPN/NRPyPN_shortcuts.py): [**documentation**](NRPyPN_shortcuts.ipynb)"
    ]
@@ -74,7 +73,7 @@
     "    sys.path.append(nrpy_dir_path)\n",
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "from NRPyPN_shortcuts import *   # NRPyPN: shortcuts for e.g., vector operations"
+    "from NRPyPN_shortcuts import div,dot,gamma_EulerMascheroni  # NRPyPN: shortcuts for e.g., vector operations"
    ]
   },
   {
@@ -368,7 +367,7 @@
     }
    ],
    "source": [
-    "from outputC import *   # NRPy+: Core C code output module\n",
+    "from NRPyPN_shortcuts import m1,m2,n12U,S1U,S2U # NRPyPN: import needed input variables.\n",
     "\n",
     "Omega = sp.symbols('Omega',real=True)\n",
     "f_dE_GW_dt_and_dM_dt(Omega, m1,m2, n12U, S1U,S2U)\n",
