--- a/NRPyPN/PN-Hamiltonian-SSS.ipynb
+++ b/NRPyPN/PN-Hamiltonian-SSS.ipynb
@@ -27,7 +27,6 @@
     "1. [PN_Hamiltonian_SSS.py](../../edit/NRPyPN/PN_Hamiltonian_SSS.py)\n",
     "\n",
     "### This notebook & corresponding Python module depend on the following NRPy+/NRPyPN Python modules:\n",
-    "1. [outputC.py](../../edit/outputC.py): [**documentation+tutorial**](../Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "1. [indexedexp.py](../../edit/indexedexp.py): [**documentation+tutorial**](../Tutorial-Indexed_Expressions.ipynb)\n",
     "1. [NRPyPN_shortcuts.py](../../edit/NRPyPN/NRPyPN_shortcuts.py): [**documentation**](NRPyPN_shortcuts.ipynb)"
    ]
@@ -96,9 +95,8 @@
     "nrpy_dir_path = os.path.join(\"..\")\n",
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
-    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "from NRPyPN_shortcuts import *   # NRPyPN: shortcuts for e.g., vector operations\n",
-    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import indexedexp as ixp                   # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "from NRPyPN_shortcuts import div,dot,cross # NRPyPN: shortcuts for e.g., vector operations\n",
     "\n",
     "# Step 1: 3PN spin-spin-spin term, from Eq. 3.12 of\n",
     "#        Levi and Steinhoff (2015):\n",
@@ -178,7 +176,8 @@
     }
    ],
    "source": [
-    "from outputC import *   # NRPy+: Core C code output module\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "from NRPyPN_shortcuts import m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q # NRPyPN: import needed input variables\n",
     "\n",
     "f_H_SSS_3PN(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q)\n",
     "\n",
