--- a/NRPyPN/PN-MOmega.ipynb
+++ b/NRPyPN/PN-MOmega.ipynb
@@ -27,7 +27,6 @@
     "1. [PN_MOmega.py](../../edit/NRPyPN/PN_MOmega.py)\n",
     "\n",
     "### This notebook & corresponding Python module depend on the following NRPy+/NRPyPN Python modules:\n",
-    "1. [outputC.py](../../edit/outputC.py): [**documentation+tutorial**](../Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "1. [indexedexp.py](../../edit/indexedexp.py): [**documentation+tutorial**](../Tutorial-Indexed_Expressions.ipynb)\n",
     "1. [NRPyPN_shortcuts.py](../../edit/NRPyPN/NRPyPN_shortcuts.py): [**documentation**](NRPyPN_shortcuts.ipynb)"
    ]
@@ -110,7 +109,7 @@
     "    sys.path.append(nrpy_dir_path)\n",
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "from NRPyPN_shortcuts import *   # NRPyPN: shortcuts for e.g., vector operations\n",
+    "from NRPyPN_shortcuts import div # NRPyPN: shortcuts for e.g., vector operations\n",
     "\n",
     "# Step 1: Construct terms a_2, a_3, and a_4, from\n",
     "#  Eq A2 of Ramos-Buades, Husa, and Pratten (2018)\n",
@@ -387,7 +386,7 @@
     }
    ],
    "source": [
-    "from outputC import *   # NRPy+: Core C code output module\n",
+    "from NRPyPN_shortcuts import m1,m2, chi1U,chi2U, q # NRPyPN: Import needed input variables\n",
     "\n",
     "f_MOmega(m1,m2, chi1U,chi2U, q)\n",
     "\n",
