--- a/NRPyPN/PN-p_r.ipynb
+++ b/NRPyPN/PN-p_r.ipynb
@@ -27,7 +27,6 @@
     "1. [PN_p_r.py](../../edit/NRPyPN/PN_p_r.py)\n",
     "\n",
     "### This notebook & corresponding Python module depend on the following NRPy+/NRPyPN Python modules:\n",
-    "1. [outputC.py](../../edit/outputC.py): [**documentation+tutorial**](../Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "1. [indexedexp.py](../../edit/indexedexp.py): [**documentation+tutorial**](../Tutorial-Indexed_Expressions.ipynb)\n",
     "1. [NRPyPN_shortcuts.py](../../edit/NRPyPN/NRPyPN_shortcuts.py): [**documentation**](NRPyPN_shortcuts.ipynb)"
    ]
@@ -78,8 +77,8 @@
     "nrpy_dir_path = os.path.join(\"..\")\n",
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
-    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
-    "from NRPyPN_shortcuts import *   # NRPyPN: shortcuts for e.g., vector operations"
+    "import sympy as sp                        # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "from NRPyPN_shortcuts import Pt,Pr,nU,div # NRPyPN: shortcuts for e.g., vector operations"
    ]
   },
   {
@@ -437,7 +436,7 @@
     }
    ],
    "source": [
-    "from outputC import *   # NRPy+: Core C code output module\n",
+    "from NRPyPN_shortcuts import m1,m2, n12U,n21U, chi1U,chi2U, S1U,S2U, p1U,p2U, r # NRPyPN: import needed input variables\n",
     "\n",
     "def error(varname):\n",
     "    print(\"ERROR: When comparing Python module & notebook, \"+varname+\" was found not to match.\")\n",
@@ -478,7 +477,8 @@
     }
    ],
    "source": [
-    "import random\n",
+    "import random # Standard Python module: provides random number generation functionality\n",
+    "from NRPyPN_shortcuts import num_eval, gamma_EulerMascheroni # NRPyPN: import numerical evaluation routine & gamma constant\n",
     "\n",
     "def eval_random(i,trusted, other, p_t):\n",
     "    random.seed(i)\n",
