--- a/NRPyPN/PN-p_t.ipynb
+++ b/NRPyPN/PN-p_t.ipynb
@@ -27,7 +27,6 @@
     "1. [PN_p_t.py](../../edit/NRPyPN/PN_p_t.py)\n",
     "\n",
     "### This notebook & corresponding Python module depend on the following NRPy+/NRPyPN Python modules:\n",
-    "1. [outputC.py](../../edit/outputC.py): [**documentation+tutorial**](../Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "1. [indexedexp.py](../../edit/indexedexp.py): [**documentation+tutorial**](../Tutorial-Indexed_Expressions.ipynb)\n",
     "1. [NRPyPN_shortcuts.py](../../edit/NRPyPN/NRPyPN_shortcuts.py): [**documentation**](NRPyPN_shortcuts.ipynb)"
    ]
@@ -113,7 +112,7 @@
     "    sys.path.append(nrpy_dir_path)\n",
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "from NRPyPN_shortcuts import *   # NRPyPN: shortcuts for e.g., vector operations\n",
+    "from NRPyPN_shortcuts import div # NRPyPN: shortcuts for e.g., vector operations\n",
     "\n",
     "# Step 1: Construct terms a_2, a_3, and a_4, from\n",
     "#  Eq A2 of Ramos-Buades, Husa, and Pratten (2018)\n",
@@ -282,6 +281,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from NRPyPN_shortcuts import m1,m2, chi1U,chi2U # Import needed input variables\n",
+    "\n",
     "p_t__a_5_thru_a_6(         m1,m2, chi1U[0],chi1U[1],chi1U[2], chi2U[0],chi2U[1],chi2U[2])\n",
     "p_t__a_5_thru_a_6v2(       m1,m2, chi1U[0],chi1U[1],chi1U[2], chi2U[0],chi2U[1],chi2U[2])\n",
     "# Again, the particle labels are interchanged in Healy, Lousto, Nakano, and Zlochower (2017):\n",
@@ -462,7 +463,7 @@
     }
    ],
    "source": [
-    "from outputC import *   # NRPy+: Core C code output module\n",
+    "from NRPyPN_shortcuts import q, num_eval # Import needed input variable & numerical evaluation routine\n",
     "\n",
     "f_p_t(m1,m2, chi1U,chi2U, q)\n",
     "\n",
